# .claude

./: .gitignore  .last-cleanup  AGENTS.md  CHEATSHEET.md  CLAUDE.md  CLAUDE.md.bak-20260418-010008  CLAUDE.md.bak-20260428-155335  CLAUDE.md.bak-20260428-163322  CLAUDE.md.bak-20260428-190514  CLAUDE.md.bak-20260428-201205  CLAUDE.md.template  README.md  antigravity-workspace.json  docs-config.yaml  docs-config.yaml.example  mcp-needs-auth-cache.json  package.sh  security_warnings_state_1d46e74c-a031-4dd4-979c-11aeced57edc.json  security_warnings_state_4a5905ea-3bad-4a62-b6e7-77482477f959.json  security_warnings_state_76701ce2-4a85-4b2c-aa68-6258242492b3.json  security_warnings_state_90b5a183-f997-4220-a55b-6d5960559cdf.json  security_warnings_state_a0cad9e8-5d40-446d-a20f-0d8968f50f5c.json  security_warnings_state_af136607-4b3b-4f79-9cfd-b418b676fb33.json  settings.json  settings.json.bak-20260418-010337  settings.json.bak-20260428-164145  settings.json.bak-20260428-182913  settings.json.bak-20260428-191053  settings.json.bak-20260428-191824  settings.json.bak-20260428-192143  settings.json.bak-20260428-194117  settings.json.bak-20260428-200325  settings.json.bak-20260428-201205  settings.json.example  settings.local.json  settings.local.json.example  setup.sh  stats-cache.json  statusline-agent.sh
console/: .gitignore  README.md  archive.py  catalog.py  cleanup.py  cli.py  pyproject.toml  triage.py  vitality.py
console/adapters/: backlog.py  git.py
console/indexers/: _frontmatter.py  agents.py  commands.py  hooks.py  repos.py  skills.py
console/tests/: test_git.py  (+11 more)
(+1105 files in other folders)
