[project]
name = "workspace-console"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
    "typer>=0.15.0",
    "rapidfuzz>=3.10.0",
    "rich>=13.9.0",
]

[project.scripts]
wsq = "console.cli:app"

[tool.setuptools]
packages = ["console", "console.adapters"]

[tool.setuptools.package-dir]
"console" = "."
"console.adapters" = "adapters"

[tool.setuptools.package-data]
console = ["migrations/*.sql"]

[tool.pytest.ini_options]
testpaths = ["tests"]
